Fix scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
-.App {
-  text-align: center;
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.app-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.app {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .app-header {
@@ -18,27 +24,14 @@
   color: white;
 }
 
-.App-link {
+.app-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 /* Map Styles */
 
 #map {
-  height: 100vh;
+  height: 90vh;
+
 }
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
